2004-10-04  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : When the reader's root node is not of type
	  Root, it incorrectly skipped the node itself.

2004-09-06  Atsushi Enomoto <atsushi@ximian.com>

	* XPathDocument2.cs, XPathDocument2Editable.cs:
	  Redesigned API. Child node list should not be required (it also
	  harms performance). Reduced extraneous methods for XPathNavigator
	  / XPathEditableNavigator implementation support.
	* XPathEditableDocument.cs : event registration was missing (due to
	  XPathDocument changes, it might not be required anymore though).
	* XPathNavigatorReader.cs :
	  Namespace nodes were not handled correctly.
	  EOF handling was incorrect.
	  Reduced extraneous clone from MoveTo/GetAttribute(int) and

2004-09-01  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : on GetAttributeNavigator(int), namespace
	  node could be this XmlReader's attribute node.

2004-08-02  Atsushi Enomoto <atsushi@ximian.com>

	* XPathDocument2.cs : new IXPathNavigable implementation
	  XPathDocument2Navigator.cs : new XPathNavigator implementation
	  XPathDocument2Editable.cs : new XPathEditableNavigator implementation

	To use them in XPathDocument, set environment MONO_XPATH_DOCUMENT_2=yes
	(It is still too unstable to pass all nunit tests and standalone XSLT
	tests).

2004-07-30  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathNavigator.cs :
	  Fixed IsSamePosition(). currentAttr is not always the same as
	  that of other when current is not attribute. Ditto for currentNS
	  (when current is not namespace).
	* XPathNavigatorReader.cs : Fixed NodeType - 1) When attribute value is
	  being consumed, then node type should be Text, and 2) Root node is
	  usually mapped to Document, but XmlReader never returns Document,
	  just None (both on Initial state and EndOfFile state).

2004-07-30  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : fixed GetAttributeNavigator() that